--- a/app.json
+++ b/app.json
@@ -8,7 +8,7 @@
     "source",
     "Rename"
   ],
-  "success_url": "https://t.me/rename1robot",
+  "success_url": "https://github.com/PakruRakesh/FileRenameBot",
   "website": "https://github.com/No-OnE-Kn0wS-Me",
   "repository": "https://github.com/No-OnE-Kn0wS-Me/FileRenameBot",
   "env": {
